<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <data>
        <import type="com.ahbap.android.app.geonamesapp.view.EarthActivityListenerView"/>
        <import type="com.ahbap.android.app.geonamesapp.geonames.entity.EarthquakeInfo"/>
        <import type="com.ahbap.android.app.geonamesapp.model.EarthquakesModel"/>
        <import type="com.ahbap.android.app.geonamesapp.converter.EarthConverter"/>
        <import type="android.widget.ArrayAdapter"/>
        <variable name="view" type="EarthActivityListenerView" />

        <variable name="model" type="EarthquakesModel" />
        <variable name="adapter" type="ArrayAdapter&lt;EarthquakeInfo&gt;" />

    </data>

<LinearLayout
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".EarthquakesActivity">


    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="numberDecimal"
        android:hint="@string/edit_text_name_earth_north"
        android:text="@={EarthConverter.INSTANCE.toStr(model.north)}"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="numberDecimal"
        android:hint="@string/edit_text_name_earth_south"
        android:text="@={EarthConverter.INSTANCE.toStr(model.south)}"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="numberDecimal"
        android:hint="@string/edit_text_name_earth_east"
        android:text="@={EarthConverter.INSTANCE.toStr(model.east)}"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="numberDecimal"
        android:hint="@string/edit_text_name_earth_west"
        android:text="@={EarthConverter.INSTANCE.toStr(model.west)}"
        />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_text_wiki_get"
        android:onClick="@{() -> view.handlerGetEarthquakesButtonCallback()}"
        />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_text_close"
        android:onClick="@{() -> view.handlerCloseButtonCallback()}"
        />

    <ListView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:adapter="@{adapter}"
        />
</LinearLayout>
</layout>